# ackerman-steering

./: README.md
my_car/: CMakeLists.txt  package.xml
my_car/config/: diffdrive.yaml  joints.yaml
my_car/launch/: 13-diffdrive.launch  display.launch  gazebo.launch  gazebo_world.launch  robot_description.launch  world.launch
my_car/rviz/: urdf.rviz
my_car/scripts/: talker.py
my_car/urdf/: 01-cylinder.urdf  01-myfirst.urdf  01-myfirst.urdf.xacro  demo.urdf
